--- a/mamAPI/appsettings.json
+++ b/mamAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=KC-CEL23-02;Database=MusicArtistManagement;Trusted_Connection=True;Integrated Security=true;MultipleActiveResultSets=true;TrustServerCertificate=true"
+        "DefaultConnection": "Server={ServerName};Database=MusicArtistManagement;Trusted_Connection=True;Integrated Security=true;MultipleActiveResultSets=true;TrustServerCertificate=true"
     },
     "Logging": {
         "LogLevel": {
